No longer cache empty users/all response, define separate Create/Update interfaces so swagger docs look better
